# transg-tui

./: Cargo.toml
src/: command_processor.rs  config.rs  icons.rs  main.rs  transmission.rs  ui.rs  utils.rs
