[package]
name = "transgression-tui"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
thiserror = "1.0"
reqwest = { version = "0.11.10", features = ["json"] }
lazy_static = "1.4.0"
base64 = "0.13.0"
#lava_torrent = "0.7.0"
tempdir = "*"
#magnet-url = "2.0.0"
#urlencoding = "2.1.0"
home = "0.5.3"
bit-vec = "0.6.3"
#procfs = "0.13.0"
tokio = { version = "1.18.0", features = [ "full" ]}
binary-heap-plus = "0.4.1"
tui-tree-widget = "0.20.0"
terminal-light = "1.0.0"
color-to-tui = "0.3.0"
ratatui = "0.26.3"
crossterm = "0.27.0"
